--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -1,4 +1,18 @@
+<link rel="stylesheet" href="static/css/home.css">
 <h3>Mean Synthh</h3>
-<a href="#!/logout">Logout</a>
-<h2>Welcome {{user.name}}</h2>
 <h4>This is where we will save your patches</h4>
+<div id="wrapper">
+    <div class="user">
+        <h2>Hello {{user.name}}</h2>
+        <a href="#!/logout">Logout</a>
+    </div>
+    <div class="synth">
+
+    </div>
+    <div class="topfive">
+
+    </div>
+    <div class="explain">
+
+    </div>
+</div>
