Second Commit with changes

--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="static/css/home.css">
-<h3>Mean Synthh</h3>
+<h3>The LSE Synth</h3>
 <h4>This is where we will save your patches</h4>
 <div id="wrapper">
     <div class="user">
