--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -4,8 +4,9 @@
 <div id="wrapper">
     <div class="user">
         <h2>Hello {{user.name}}</h2>
-        <a href="#!/logout">Logout</a>
+        <a id="links" href="#!/logout">Logout</a>
     </div>
+
     <div id="synthmodule">
       <span id="meanie">M E A N S Y N T H</span>
       <span id="lse">L S E</span>
@@ -167,6 +168,8 @@
           <div id="button"><a id='ledlight'></a><br><button class='junobutton2'></button><br><span class='modparam'>II</span></div>
       </div>
     </div>
+
+
     <div class="topfive">
 
     </div>
