--- a/client/static/css/synth.css
+++ b/client/static/css/synth.css
@@ -6,7 +6,7 @@
 @import url(http://fonts.googleapis.com/css?family=Monoton);
 *{
   /*border: 1px dotted red;*/
-  color: white;
+  color: #dfd6e1;
   font-family: 'Candal', sans-serif;
 
 }
