--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -55,6 +55,7 @@
             <option value="Supersawlead">Tom Sawyer</option>
             <option value="Bass">Deadmau5</option>
           </select>
+          <br><button type="button" ng-click="addPatch(newPatch)">Save</button>
         </div>
       </div>
       <div id="vcftray">
@@ -70,7 +71,7 @@
           </datalist>
         </div>
         <div id="fader">
-          <span  class='modparam'>Res</span><br><input type="range" min="1" max="4" value="2.5" step="0.01" class="vertical" orient="vertical" list="resonance">
+          <span class='modparam'>Res</span><br><input type="range" min="1" max="4" value="2.5" step="0.01" class="vertical" orient="vertical" list="resonance">
           <datalist id="resonance">
             <option>1</option>
             <option>1.6</option>
