--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -1,3 +1,4 @@
+<script src="flocking/flocking-all.js"></script>
 <link rel="stylesheet" href="static/css/home.css">
 <h3>The LSE Synth</h3>
 <h4>This is where we will save your patches</h4>
