--- a/client/partials/login.html
+++ b/client/partials/login.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="static/css/login.css">
 <div id="wrapper">
 		<div class="login">
 				<h3>Log in!</h3>
@@ -6,6 +7,6 @@
 						Password:<input type="password" name"password" placeholder="Password" ng-model="loginUser.password">
 						<button ng-click="login(loginUser)">Login</button>
 				</form>
-				<p>Don't have an account?<a href="#!/register"> Register!</p>
+				<p>Don't have an account? <a href="#!/register" class="registerlink">Register Here!</a></p>
 		</div>
 </div>
